apps/base/immich/service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  selector:
    app: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
